# Dutad

./: .gitattributes  .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/examples/: bench_v41_cpu.rs
core/src/: address.rs  amount.rs  dutahash.rs  hash.rs  lib.rs  netparams.rs  pow_v3.rs  pow_v4.rs  store.rs  types.rs  util.rs
core/src/pow/: mod.rs  v3.rs  v4.rs
daemon/: Cargo.toml
daemon/src/: amount_display.rs  btc_rpc.rs  canon_json.rs  debuglog.rs  info.rs  main.rs  p2p.rs  rpc_json.rs  store.rs  submit_tx.rs  submit_work.rs  utxo_rpc.rs  work.rs
docs/: BACKUP_AND_RECOVERY.md  BUILD_LINUX.md  BUILD_WINDOWS.md  DENOMINATION_MIGRATION.md  DEPLOY_LINUX_SERVICES.md  INSTALL_FROM_BINARY.md  MANDATORY_FORK_RC_V4_1_CHECKLIST.md  MANDATORY_FORK_RC_V4_1_OPERATOR_ROLLOUT.md  MINING_GUIDE.md  RELEASE_DOWNLOAD_0.0.1-beta.md  RELEASE_LINUX.md  RELEASE_NOTES_0.0.1_BETA.md  RELEASE_WINDOWS.md  SECURITY_NOTES.md  USAGE.md
examples/config/: duta.mainnet.conf  duta.testnet.conf  dutaminer.mainnet.json  dutaminer.testnet.json
examples/systemd/: dutad.service
scripts/: build-linux.sh  build-windows.cmd  mine-solo.cmd  mine-solo.ps1  mine-solo.sh  run-node-mining.cmd  run-node-mining.ps1  run-node-mining.sh
tools/: bench_v41_gpu_opencl.py  build_release_bundle.ps1  build_release_bundle.sh
