[package]
name = "duta-core"
version = "1.0.3"
edition = "2021"
license = "MIT"
authors = ["Duta <dutagoxyz@gmail.com>"]
description = "DUTA core primitives (consensus, netparams, address, dutahash)."
homepage = "https://dutago.xyz"
readme = "../README.md"
keywords = ["duta", "pow", "blockchain", "consensus", "hash"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
sha3 = "0.10"
hex = "0.4"
thiserror = "1"
serde_json = "1"
