[package]
name = "dutad"
version = "1.0.3"
edition = "2021"
license = "MIT"
authors = ["Duta <dutagoxyz@gmail.com>"]
description = "DUTA node daemon with RPC, P2P, and built-in solo mining tools."
homepage = "https://dutago.xyz"
readme = "../README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
duta-core = { path = "../core" }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["std"] }
sled = "0.34"
time = { version = "0.3", features = ["formatting", "local-offset"] }
ctrlc = "3"
